ir/ir_builder.h


IRContext* ir_create_context(void);
void ir_destroy_context(IRContext* context);
void ir_set_context(IRContext* context);
IRComponent* ir_get_root(void);  
void ir_set_root(IRComponent* root);  
IRComponent* ir_create_component(IRComponentType type);
IRComponent* ir_create_component_with_id(IRComponentType type, uint32_t id);
void ir_destroy_component(IRComponent* component);
void ir_add_child(IRComponent* parent, IRComponent* child);
void ir_remove_child(IRComponent* parent, IRComponent* child);
void ir_insert_child(IRComponent* parent, IRComponent* child, uint32_t index);
IRComponent* ir_get_child(IRComponent* component, uint32_t index);
IRComponent* ir_find_component_by_id(IRComponent* root, uint32_t id);
IRStyle* ir_create_style(void);
void ir_destroy_style(IRStyle* style);
void ir_set_style(IRComponent* component, IRStyle* style);
IRStyle* ir_get_style(IRComponent* component);
void ir_set_width(IRStyle* style, IRDimensionType type, float value);
void ir_set_height(IRStyle* style, IRDimensionType type, float value);
void ir_set_visible(IRStyle* style, bool visible);
void ir_set_background_color(IRStyle* style, uint8_t r, uint8_t g, uint8_t b, uint8_t a);
void ir_set_border(IRStyle* style, float width, uint8_t r, uint8_t g, uint8_t b, uint8_t a, uint8_t radius);
void ir_set_margin(IRStyle* style, float top, float right, float bottom, float left);
void ir_set_padding(IRStyle* style, float top, float right, float bottom, float left);
void ir_set_font(IRStyle* style, float size, const char* family, uint8_t r, uint8_t g, uint8_t b, uint8_t a, bool bold, bool italic);
void ir_set_z_index(IRStyle* style, uint32_t z_index);
void ir_set_text_overflow(IRStyle* style, IRTextOverflowType overflow);
void ir_set_text_fade(IRStyle* style, IRTextFadeType fade_type, float fade_length);
void ir_set_text_shadow(IRStyle* style, float offset_x, float offset_y, float blur_radius,
                        uint8_t r, uint8_t g, uint8_t b, uint8_t a);
void ir_set_opacity(IRStyle* style, float opacity);
IRLayout* ir_create_layout(void);
void ir_destroy_layout(IRLayout* layout);
void ir_set_layout(IRComponent* component, IRLayout* layout);
IRLayout* ir_get_layout(IRComponent* component);
void ir_set_min_width(IRLayout* layout, IRDimensionType type, float value);
void ir_set_min_height(IRLayout* layout, IRDimensionType type, float value);
void ir_set_max_width(IRLayout* layout, IRDimensionType type, float value);
void ir_set_max_height(IRLayout* layout, IRDimensionType type, float value);
void ir_set_aspect_ratio(IRLayout* layout, float ratio);
typedef struct TabVisualState {
    uint32_t background_color;        
    uint32_t active_background_color;
    uint32_t text_color;
    uint32_t active_text_color;
} TabVisualState;
typedef void (*TabClickCallback)(uint32_t tab_index, void* user_data);
typedef struct TabGroupState {
    IRComponent* group;
    IRComponent* tab_bar;
    IRComponent* tab_content;
    IRComponent* tabs[IR_MAX_TABS_PER_GROUP];         
    IRComponent* panels[IR_MAX_TABS_PER_GROUP];       
    TabVisualState tab_visuals[IR_MAX_TABS_PER_GROUP]; 
    TabClickCallback user_callbacks[IR_MAX_TABS_PER_GROUP]; 
    void* user_callback_data[IR_MAX_TABS_PER_GROUP];  
    uint32_t tab_count;
    uint32_t panel_count;
    int selected_index;
    bool reorderable;
    bool dragging;
    int drag_index;
    float drag_x;
} TabGroupState;
void ir_set_background_gradient(IRStyle* style, IRGradient* gradient);