ir/ir_core.h


typedef enum {
    IR_COMPONENT_CONTAINER,
    IR_COMPONENT_TEXT,
    IR_COMPONENT_BUTTON,
    IR_COMPONENT_INPUT,
    IR_COMPONENT_CHECKBOX,
    IR_COMPONENT_DROPDOWN,
    IR_COMPONENT_ROW,
    IR_COMPONENT_COLUMN,
    IR_COMPONENT_CENTER,
    IR_COMPONENT_IMAGE,
    IR_COMPONENT_CANVAS,
    IR_COMPONENT_MARKDOWN,
    IR_COMPONENT_CUSTOM
} IRComponentType;
typedef enum {
    IR_DIMENSION_PX,
    IR_DIMENSION_PERCENT,
    IR_DIMENSION_AUTO,
    IR_DIMENSION_FLEX,
    IR_DIMENSION_VW,        
    IR_DIMENSION_VH,        
    IR_DIMENSION_VMIN,      
    IR_DIMENSION_VMAX,      
    IR_DIMENSION_REM,       
    IR_DIMENSION_EM         
} IRDimensionType;
typedef struct {
    IRDimensionType type;
    float value;
} IRDimension;
typedef enum {
    IR_COLOR_SOLID,
    IR_COLOR_TRANSPARENT,
    IR_COLOR_GRADIENT,
    IR_COLOR_VAR_REF    
} IRColorType;
typedef uint16_t IRStyleVarId;
typedef struct IRGradient IRGradient;
typedef union IRColorData {
    struct { uint8_t r, g, b, a; };  
    IRStyleVarId var_id;              
    IRGradient* gradient;             
} IRColorData;
typedef struct IRColor {
    IRColorType type;
    IRColorData data;
} IRColor;
#define IR_COLOR_GRADIENT(GRAD_PTR) ((IRColor){ .type = IR_COLOR_GRADIENT, .data = { .gradient = (GRAD_PTR) } })
typedef enum {
    IR_GRADIENT_LINEAR,
    IR_GRADIENT_RADIAL,
    IR_GRADIENT_CONIC
} IRGradientType;
typedef struct {
    float position;  
    uint8_t r, g, b, a;
} IRGradientStop;
struct IRGradient {
    IRGradientType type;
    IRGradientStop stops[8];  
    uint8_t stop_count;
    float angle;  
    float center_x, center_y;  
};
typedef enum {
    IR_ALIGNMENT_START,
    IR_ALIGNMENT_CENTER,
    IR_ALIGNMENT_END,
    IR_ALIGNMENT_STRETCH,
    IR_ALIGNMENT_SPACE_BETWEEN,
    IR_ALIGNMENT_SPACE_AROUND,
    IR_ALIGNMENT_SPACE_EVENLY
} IRAlignment;
typedef struct {
    bool wrap;
    uint32_t gap;
    IRAlignment main_axis;
    IRAlignment cross_axis;
    IRAlignment justify_content;
    uint8_t grow;      
    uint8_t shrink;    
    uint8_t direction; 
} IRFlexbox;
typedef enum {
    IR_LAYOUT_MODE_FLEX,    
    IR_LAYOUT_MODE_GRID,    
    IR_LAYOUT_MODE_BLOCK    
} IRLayoutMode;
typedef struct {
    IRGridTrack rows[IR_MAX_GRID_TRACKS];
    IRGridTrack columns[IR_MAX_GRID_TRACKS];
    uint8_t row_count;
    uint8_t column_count;
    float row_gap;
    float column_gap;
    IRAlignment justify_items;   
    IRAlignment align_items;     
    IRAlignment justify_content; 
    IRAlignment align_content;   
    bool auto_flow_row;  
    bool auto_flow_dense; 
} IRGrid;
typedef struct {
    int16_t row_start;     
    int16_t row_end;       
    int16_t column_start;  
    int16_t column_end;    
    IRAlignment justify_self;  
    IRAlignment align_self;    
} IRGridItem;
typedef struct {
    float top, right, bottom, left;
} IRSpacing;
typedef struct {
    float width;
    IRColor color;
    uint8_t radius;  
} IRBorder;
typedef enum {
    IR_TEXT_ALIGN_LEFT,
    IR_TEXT_ALIGN_RIGHT,
    IR_TEXT_ALIGN_CENTER,
    IR_TEXT_ALIGN_JUSTIFY
} IRTextAlign;
typedef struct {
    float size;
    IRColor color;
    bool bold;
    bool italic;
    char* family;  
    uint16_t weight;           
    float line_height;         
    float letter_spacing;      
    float word_spacing;        
    IRTextAlign align;         
    uint8_t decoration;        
} IRTypography;
typedef struct {
    float translate_x, translate_y;
    float scale_x, scale_y;
    float rotate;
} IRTransform;
typedef struct IRAnimation {
    char* name;  
    float duration;  
    float delay;  
    int32_t iteration_count;  
    bool alternate;  
    IREasingType default_easing;  
    IRKeyframe keyframes[IR_MAX_KEYFRAMES];
    uint8_t keyframe_count;
    float current_time;
    int32_t current_iteration;
    bool is_paused;
} IRAnimation;
typedef struct IRTransition {
    IRAnimationProperty property;  
    float duration;  
    float delay;  
    IREasingType easing;  
    uint32_t trigger_state;  
} IRTransition;
typedef enum {
    IR_TEXT_OVERFLOW_VISIBLE,   
    IR_TEXT_OVERFLOW_CLIP,      
    IR_TEXT_OVERFLOW_ELLIPSIS,  
    IR_TEXT_OVERFLOW_FADE       
} IRTextOverflowType;
typedef enum {
    IR_TEXT_FADE_NONE,
    IR_TEXT_FADE_HORIZONTAL,    
    IR_TEXT_FADE_VERTICAL,      
    IR_TEXT_FADE_RADIAL         
} IRTextFadeType;
typedef struct IRTextEffect {
    IRTextOverflowType overflow;
    IRTextFadeType fade_type;
    float fade_length;          
    IRTextShadow shadow;
} IRTextEffect;
typedef struct IRBoxShadow {
    float offset_x;
    float offset_y;
    float blur_radius;
    float spread_radius;        
    IRColor color;
    bool inset;                 
    bool enabled;
} IRBoxShadow;
typedef struct IRFilter {
    IRFilterType type;
    float value;                
} IRFilter;
typedef struct {
    IRLayoutMode mode;  
    IRDimension min_width, min_height;
    IRDimension max_width, max_height;
    IRFlexbox flex;     
    IRGrid grid;        
    IRSpacing margin;
    IRSpacing padding;
    float aspect_ratio;  
} IRLayout;
typedef enum {
    IR_POSITION_RELATIVE,   
    IR_POSITION_ABSOLUTE,   
    IR_POSITION_FIXED       
} IRPositionMode;
typedef enum {
    IR_OVERFLOW_VISIBLE,    
    IR_OVERFLOW_HIDDEN,     
    IR_OVERFLOW_SCROLL,     
    IR_OVERFLOW_AUTO        
} IROverflowMode;
typedef struct IRBreakpoint {
    IRQueryCondition conditions[IR_MAX_QUERY_CONDITIONS];
    uint8_t condition_count;
    IRDimension width;
    IRDimension height;
    bool visible;  
    float opacity;
    IRLayoutMode layout_mode;
    bool has_layout_mode;  
} IRBreakpoint;
typedef enum {
    IR_CONTAINER_TYPE_NORMAL,      
    IR_CONTAINER_TYPE_SIZE,        
    IR_CONTAINER_TYPE_INLINE_SIZE  
} IRContainerType;
typedef struct {
    IRPseudoState state;           
    IRColor background;
    IRColor text_color;
    IRColor border_color;
    float opacity;
    IRTransform transform;         
    bool has_background;
    bool has_text_color;
    bool has_border_color;
    bool has_opacity;
    bool has_transform;
} IRPseudoStyle;
typedef struct IRStyle {
    IRDimension width, height;
    IRColor background;
    IRColor border_color;
    IRBorder border;
    IRSpacing margin, padding;
    IRTypography font;
    IRTransform transform;
    IRAnimation** animations;  
    uint32_t animation_count;
    IRTransition** transitions;  
    uint32_t transition_count;
    uint32_t z_index;
    bool visible;
    float opacity;
    IRPositionMode position_mode;
    float absolute_x;
    float absolute_y;
    IROverflowMode overflow_x;
    IROverflowMode overflow_y;
    IRGridItem grid_item;
    IRTextEffect text_effect;
    IRBoxShadow box_shadow;
    IRFilter filters[IR_MAX_FILTERS];
    uint8_t filter_count;
    IRBreakpoint breakpoints[IR_MAX_BREAKPOINTS];
    uint8_t breakpoint_count;
    IRContainerType container_type;
    char* container_name;  
    IRPseudoStyle pseudo_styles[IR_MAX_PSEUDO_STYLES];
    uint8_t pseudo_style_count;
    uint32_t current_pseudo_states;
} IRStyle;
typedef enum {
    IR_EVENT_CLICK,
    IR_EVENT_HOVER,
    IR_EVENT_FOCUS,
    IR_EVENT_BLUR,
    IR_EVENT_KEY,
    IR_EVENT_SCROLL,
    IR_EVENT_TIMER,
    IR_EVENT_CUSTOM
} IREventType;
typedef enum {
    IR_LOGIC_NIM,
    IR_LOGIC_C,
    IR_LOGIC_LUA,
    IR_LOGIC_WASM,
    IR_LOGIC_NATIVE
} LogicSourceType;
typedef struct IREvent {
    IREventType type;
    char* logic_id;      
    char* handler_data;  
    struct IREvent* next;
} IREvent;
typedef struct IRLogic {
    char* id;
    char* source_code;
    LogicSourceType type;
    struct IRLogic* next;
} IRLogic;
typedef struct {
    bool dirty;                          
    float cached_intrinsic_width;        
    float cached_intrinsic_height;       
    uint32_t cache_generation;           
} IRLayoutCache;
typedef struct IRRenderedBounds {
    float x, y, width, height;
    bool valid;  
} IRRenderedBounds;
typedef struct IRComponent {
    uint32_t id;
    IRComponentType type;
    char* tag;           
    IRStyle* style;
    IREvent* events;
    IRLogic* logic;
    struct IRComponent** children;
    uint32_t child_count;
    uint32_t child_capacity;  
    IRLayout* layout;
    struct IRComponent* parent;
    char* text_content;  
    char* custom_data;   
    IRRenderedBounds rendered_bounds;  
    IRLayoutCache layout_cache;        
    uint32_t dirty_flags;              
    bool has_active_animations;        
} IRComponent;
typedef struct IRComponentPool IRComponentPool;
typedef struct IRComponentMap IRComponentMap;
typedef struct IRContext {
    IRComponent* root;
    IRLogic* logic_list;
    uint32_t next_component_id;
    uint32_t next_logic_id;
    IRComponentPool* component_pool;  
    IRComponentMap* component_map;     
} IRContext;