bindings/nim/ir_core.nim

## Universal IR Core Bindings for Nim
## Direct bindings to the new IR system - no legacy compatibility layers

# Type definitions from ir_core.h
type
  IRComponentType* {.size: sizeof(cint).} = enum
    IR_COMPONENT_CONTAINER = 0
    IR_COMPONENT_TEXT
    IR_COMPONENT_BUTTON
    IR_COMPONENT_INPUT
    IR_COMPONENT_CHECKBOX
    IR_COMPONENT_DROPDOWN
    IR_COMPONENT_ROW
    IR_COMPONENT_COLUMN
    IR_COMPONENT_CENTER
    IR_COMPONENT_IMAGE
    IR_COMPONENT_CANVAS
    IR_COMPONENT_MARKDOWN
    IR_COMPONENT_CUSTOM

  IRDimensionType* {.size: sizeof(cint).} = enum
    IR_DIMENSION_PX = 0      # Pixels
    IR_DIMENSION_PERCENT   # Percentage (0-100)
    IR_DIMENSION_AUTO      # Auto-calculated
    IR_DIMENSION_FLEX      # Flex units

  IRAlignment* {.size: sizeof(cint).} = enum
    IR_ALIGNMENT_START = 0
    IR_ALIGNMENT_CENTER
    IR_ALIGNMENT_END
    IR_ALIGNMENT_STRETCH
    IR_ALIGNMENT_SPACE_BETWEEN
    IR_ALIGNMENT_SPACE_AROUND
    IR_ALIGNMENT_SPACE_EVENLY

  IRTextAlign* {.size: sizeof(cint).} = enum
    IR_TEXT_ALIGN_LEFT = 0
    IR_TEXT_ALIGN_RIGHT
    IR_TEXT_ALIGN_CENTER
    IR_TEXT_ALIGN_JUSTIFY

  IREventType* {.size: sizeof(cint).} = enum
    IR_EVENT_CLICK = 0
    IR_EVENT_HOVER
    IR_EVENT_FOCUS
    IR_EVENT_BLUR
    IR_EVENT_KEY
    IR_EVENT_SCROLL
    IR_EVENT_TIMER
    IR_EVENT_CUSTOM

  LogicSourceType* {.size: sizeof(cint).} = enum
    LOGIC_NONE = 0
    LOGIC_JAVASCRIPT
    LOGIC_WEBASSEMBLY
    LOGIC_LUA
    LOGIC_PYTHON

# Core structures
type
  IRDimension* = object
    `type`*: IRDimensionType
    value*: cfloat

  IRColorType* {.size: sizeof(cint).} = enum
    IR_COLOR_SOLID = 0
    IR_COLOR_TRANSPARENT
    IR_COLOR_GRADIENT
    IR_COLOR_VAR_REF

  # Gradient types
  IRGradientType* {.size: sizeof(cint).} = enum
    IR_GRADIENT_LINEAR = 0
    IR_GRADIENT_RADIAL
    IR_GRADIENT_CONIC

  IRGradientStop* {.importc: "IRGradientStop", header: "ir_core.h".} = object
    r*, g*, b*, a*: uint8
    position*: cfloat  # 0.0 to 1.0

  IRGradient* {.importc: "struct IRGradient", header: "ir_core.h".} = object
    `type`*: IRGradientType
    stops*: array[8, IRGradientStop]
    stop_count*: uint8
    angle*: cfloat           # For linear gradients (degrees)
    center_x*: cfloat        # For radial/conic (0.0 to 1.0)
    center_y*: cfloat        # For radial/conic (0.0 to 1.0)

  # Union data for IRColor - matches C union layout exactly
  # C has: union { struct { uint8_t r, g, b, a; }; IRStyleVarId var_id; ptr[IRGradient] gradient; }
  # Use importc to match the C field names
  IRColorData* {.importc: "IRColorData", header: "ir_core.h", union.} = object
    r*, g*, b*, a*: uint8   # Anonymous struct fields (accessed directly)
    var_id*: uint16         # Style variable reference
    gradient*: ptr IRGradient  # Gradient pointer

  IRColor* {.importc: "IRColor", header: "ir_core.h".} = object
    `type`*: IRColorType
    data*: IRColorData

# IRColor convenience accessors for backwards compatibility
template r*(c: IRColor): uint8 = c.data.r
template g*(c: IRColor): uint8 = c.data.g
template b*(c: IRColor): uint8 = c.data.b
template a*(c: IRColor): uint8 = c.data.a
template var_id*(c: IRColor): uint16 = c.data.var_id

template `r=`*(c: var IRColor, v: uint8) = c.data.r = v
template `g=`*(c: var IRColor, v: uint8) = c.data.g = v
template `b=`*(c: var IRColor, v: uint8) = c.data.b = v
template `a=`*(c: var IRColor, v: uint8) = c.data.a = v
template `var_id=`*(c: var IRColor, v: uint16) = c.data.var_id = v

type
  IRSpacing* = object
    top*: cfloat
    right*: cfloat
    bottom*: cfloat
    left*: cfloat

  IRFont* = object
    family*: cstring
    size*: cfloat
    color*: IRColor
    bold*: bool
    italic*: bool

  IRBorder* = object
    width*: cfloat
    color*: IRColor
    radius*: uint8

  IRTypography* = object
    size*: cfloat
    color*: IRColor
    bold*: bool
    italic*: bool
    family*: cstring

  IRFlexbox* = object
    wrap*: bool
    gap*: uint32
    main_axis*: IRAlignment
    cross_axis*: IRAlignment
    justify_content*: IRAlignment
    grow*: uint8      # Flex grow factor (0-255)
    shrink*: uint8    # Flex shrink factor (0-255)
    direction*: uint8 # Layout direction: 0=column, 1=row

  IRPositionMode* {.size: sizeof(cint).} = enum
    IR_POSITION_RELATIVE = 0
    IR_POSITION_ABSOLUTE

  # Text Overflow Behavior
  IRTextOverflowType* {.size: sizeof(cint).} = enum
    IR_TEXT_OVERFLOW_VISIBLE = 0  # Show all text (may overflow bounds)
    IR_TEXT_OVERFLOW_CLIP         # Hard clip at bounds
    IR_TEXT_OVERFLOW_ELLIPSIS     # Show "..." when truncated
    IR_TEXT_OVERFLOW_FADE         # Gradient fade at edge

  # Text Fade Direction
  IRTextFadeType* {.size: sizeof(cint).} = enum
    IR_TEXT_FADE_NONE = 0
    IR_TEXT_FADE_HORIZONTAL       # Fade left/right edges
    IR_TEXT_FADE_VERTICAL         # Fade top/bottom edges
    IR_TEXT_FADE_RADIAL           # Fade from center outward

  IRStyle* {.importc: "IRStyle", header: "ir_core.h", incompleteStruct.} = object
    width*: IRDimension
    height*: IRDimension
    min_width*: IRDimension
    min_height*: IRDimension
    max_width*: IRDimension
    max_height*: IRDimension
    background*: IRColor
    border*: IRBorder
    margin*: IRSpacing
    padding*: IRSpacing
    font*: IRTypography
    visible*: bool
    z_index*: uint32
    position_mode*: IRPositionMode
    absolute_x*: cfloat
    absolute_y*: cfloat

  IRLayout* {.importc: "IRLayout", header: "ir_core.h", incompleteStruct.} = object
    min_width*: IRDimension
    min_height*: IRDimension
    max_width*: IRDimension
    max_height*: IRDimension
    flex*: IRFlexbox
    margin*: IRSpacing
    padding*: IRSpacing
    align_items*: IRAlignment
    align_content*: IRAlignment

  IREvent* {.importc: "IREvent", header: "ir_core.h", incompleteStruct.} = object

  LogicSource* = object
    `type`*: LogicSourceType
    source*: cstring
    language*: cstring

  # Layout cache for performance optimization
  IRLayoutCache* {.importc: "IRLayoutCache", header: "ir_core.h".} = object
    dirty*: bool
    cached_intrinsic_width*: cfloat
    cached_intrinsic_height*: cfloat
    cache_generation*: uint32

  IRComponent* {.importc: "IRComponent", header: "ir_core.h", incompleteStruct.} = object
    id*: uint32
    `type`*: IRComponentType
    tag*: cstring
    style*: ptr IRStyle
    events*: ptr IREvent
    logic*: ptr LogicSource
    children*: ptr ptr IRComponent
    child_count*: uint32
    layout*: ptr IRLayout
    parent*: ptr IRComponent
    text_content*: cstring
    custom_data*: cstring
    layout_cache*: IRLayoutCache

  IRContext* {.importc: "IRContext", header: "ir_core.h", incompleteStruct.} = object
  TabGroupState* {.importc: "TabGroupState", header: "ir_builder.h", incompleteStruct.} = object

  # Tab visual state for active/inactive tab colors (matches C struct)
  CTabVisualState* {.importc: "TabVisualState", header: "ir_builder.h".} = object
    background_color*: uint32
    active_background_color*: uint32
    text_color*: uint32
    active_text_color*: uint32

# Context Management
proc ir_create_context*(): ptr IRContext {.importc, cdecl, header: "ir_builder.h".}
proc ir_destroy_context*(context: ptr IRContext) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_context*(context: ptr IRContext) {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_root*(): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_root*(root: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}

# Component Creation
proc ir_create_component*(component_type: IRComponentType): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}
proc ir_create_component_with_id*(component_type: IRComponentType; id: uint32): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}
proc ir_destroy_component*(component: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}

# Tree Structure Management
proc ir_add_child*(parent: ptr IRComponent; child: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}
proc ir_remove_child*(parent: ptr IRComponent; child: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}
proc ir_insert_child*(parent: ptr IRComponent; child: ptr IRComponent; index: uint32) {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_child*(component: ptr IRComponent; index: uint32): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}
proc ir_find_component_by_id*(root: ptr IRComponent; id: uint32): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}

# Style Management
proc ir_create_style*(): ptr IRStyle {.importc, cdecl, header: "ir_builder.h".}
proc ir_destroy_style*(style: ptr IRStyle) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_style*(component: ptr IRComponent; style: ptr IRStyle) {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_style*(component: ptr IRComponent): ptr IRStyle {.importc, cdecl, header: "ir_builder.h".}

# Style Property Helpers
proc ir_set_width*(style: ptr IRStyle; dimension_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_height*(style: ptr IRStyle; dimension_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_min_width*(layout: ptr IRLayout; dimension_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_min_height*(layout: ptr IRLayout; dimension_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_max_width*(layout: ptr IRLayout; dimension_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_max_height*(layout: ptr IRLayout; dimension_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_aspect_ratio*(layout: ptr IRLayout; ratio: cfloat) {.importc, cdecl, header: "ir_builder.h".}

proc ir_set_background_color*(style: ptr IRStyle; r: uint8; g: uint8; b: uint8; a: uint8) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_background_gradient*(style: ptr IRStyle; gradient: ptr IRGradient) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_border*(style: ptr IRStyle; width: cfloat; r: uint8; g: uint8; b: uint8; a: uint8; radius: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_margin*(style: ptr IRStyle; top: cfloat; right: cfloat; bottom: cfloat; left: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_padding*(style: ptr IRStyle; top: cfloat; right: cfloat; bottom: cfloat; left: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_font*(style: ptr IRStyle; size: cfloat; family: cstring; r: uint8; g: uint8; b: uint8; a: uint8; bold: bool; italic: bool) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_visible*(style: ptr IRStyle; visible: bool) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_z_index*(style: ptr IRStyle; z_index: uint32) {.importc, cdecl, header: "ir_builder.h".}

# Text Effect Property Helpers
proc ir_set_text_overflow*(style: ptr IRStyle; overflow: IRTextOverflowType) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_text_fade*(style: ptr IRStyle; fade_type: IRTextFadeType; fade_length: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_text_shadow*(style: ptr IRStyle; offset_x, offset_y, blur_radius: cfloat; r, g, b, a: uint8) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_opacity*(style: ptr IRStyle; opacity: cfloat) {.importc, cdecl, header: "ir_builder.h".}

# Layout Management
proc ir_create_layout*(): ptr IRLayout {.importc, cdecl, header: "ir_builder.h".}
proc ir_destroy_layout*(layout: ptr IRLayout) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_layout*(component: ptr IRComponent; layout: ptr IRLayout) {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_layout*(component: ptr IRComponent): ptr IRLayout {.importc, cdecl, header: "ir_builder.h".}
